force-app/main/default/objects/Case/fields/Requested_Materials__c.field-meta.xml
<CustomField>
    <fullName>Requested_Materials__c</fullName>
    <label>Requested Materials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STAFF Master Prom Notes</fullName>
            </value>
            <value>
                <fullName>STAFF Master Prom Notes - Imprint</fullName>
            </value>
            <value>
                <fullName>STAFF Compl Directions</fullName>
            </value>
            <value>
                <fullName>Entr/Exit Counsel Check</fullName>
            </value>
            <value>
                <fullName>STAFF School Cert Form</fullName>
            </value>
            <value>
                <fullName>Budget Worksheet</fullName>
            </value>
            <value>
                <fullName>Pre-paid return envels</fullName>
            </value>
            <value>
                <fullName>Deferment/Forbearance Info</fullName>
            </value>
            <value>
                <fullName>Repayment Worksheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>