force-app/main/default/objects/Case/fields/Safelist_IP_Address_Sent__c.field-meta.xml
<CustomField>
    <fullName>Safelist_IP_Address_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safelist IP Address Sent</label>
    <type>Checkbox</type>
</CustomField>