force-app/main/default/objects/Case/fields/SALT_Intro_Email_Content_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>SALT_Intro_Email_Content_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SALT Intro Email Content: Enrolled</label>
    <type>Checkbox</type>
</CustomField>