force-app/main/default/objects/Case/fields/SALT_Intro_Email_Sent_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>SALT_Intro_Email_Sent_Enrolled__c</fullName>
    <label>SALT Intro Email Sent: Enrolled</label>
    <type>Date</type>
</CustomField>