force-app/main/default/objects/Case/fields/SALT_Profile_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>SALT_Profile_Creation_Date__c</fullName>
    <description>Date the BPMS profile is complete</description>
    <label>SALT Profile Creation Date</label>
    <type>Date</type>
</CustomField>