force-app/main/default/objects/Case/fields/SALTVanity_URL__c.field-meta.xml
<CustomField>
    <fullName>SALTVanity_URL__c</fullName>
    <formula>Account.SALT_Vanity_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SALT Vanity URL</label>
    <type>Text</type>
</CustomField>