force-app/main/default/objects/Case/fields/Satisfaction_Surveys__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Surveys__c</fullName>
    <label>Satisfaction Surveys</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes – Initiated</fullName>
            </value>
            <value>
                <fullName>WIP</fullName>
            </value>
            <value>
                <fullName>Yes – Completed</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>