force-app/main/default/objects/Case/fields/School_Co_Branded_URL__c.field-meta.xml
<CustomField>
    <fullName>School_Co_Branded_URL__c</fullName>
    <description>Branded School page web link URL</description>
    <label>School Co-Branded URL</label>
    <type>Url</type>
</CustomField>