force-app/main/default/objects/Case/fields/School_Email__c.field-meta.xml
<CustomField>
    <fullName>School_Email__c</fullName>
    <label>School Email</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>School - CL4 Unsol Resp</fullName>
            </value>
            <value>
                <fullName>Copay Check Roster</fullName>
            </value>
            <value>
                <fullName>CRC v1 Disb Forecast All</fullName>
            </value>
            <value>
                <fullName>CRC v1 Disb Forecast School Hold</fullName>
            </value>
            <value>
                <fullName>CRC v1 School Roster</fullName>
            </value>
            <value>
                <fullName>CRC v1 SCR</fullName>
            </value>
            <value>
                <fullName>School - CRC v1 Unsol Resp</fullName>
            </value>
            <value>
                <fullName>Credit Approval Letter Rpt</fullName>
            </value>
            <value>
                <fullName>Disb Roster</fullName>
            </value>
            <value>
                <fullName>Email SCR Notification</fullName>
            </value>
            <value>
                <fullName>FastFund Pre-Disb</fullName>
            </value>
            <value>
                <fullName>Indiv Check Roster</fullName>
            </value>
            <value>
                <fullName>Notice of Loan Approval</fullName>
            </value>
            <value>
                <fullName>Pre-Disb Rpt</fullName>
            </value>
            <value>
                <fullName>Preclaims For Schools</fullName>
            </value>
            <value>
                <fullName>School - Proc Sum Rpt</fullName>
            </value>
            <value>
                <fullName>Roster Dunning Rpt</fullName>
            </value>
            <value>
                <fullName>School Escrow Disb R/U</fullName>
            </value>
            <value>
                <fullName>School Hold File</fullName>
            </value>
            <value>
                <fullName>School Missing Prom Note Rpt</fullName>
            </value>
            <value>
                <fullName>School Pending Cert Req</fullName>
            </value>
            <value>
                <fullName>School Roster File</fullName>
            </value>
            <value>
                <fullName>SSCR not returned Letter</fullName>
            </value>
            <value>
                <fullName>SSCR Outbound feed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>