force-app/main/default/objects/Case/fields/School_OE_Code_s__c.field-meta.xml
<CustomField>
    <fullName>School_OE_Code_s__c</fullName>
    <label>School OE Code(s)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>