force-app/main/default/objects/Case/fields/School_Portal_Set_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>School_Portal_Set_Up_Date__c</fullName>
    <description>School portal set up date.</description>
    <label>School Portal Set Up Date</label>
    <type>Date</type>
</CustomField>