force-app/main/default/objects/Case/fields/School_Process_Flow__c.field-meta.xml
<CustomField>
    <fullName>School_Process_Flow__c</fullName>
    <label>School Process Flow</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Guarantee Only</fullName>
            </value>
            <value>
                <fullName>Mix/Split</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>