force-app/main/default/objects/Case/fields/School_Provided_Servicer_Data__c.field-meta.xml
<CustomField>
    <fullName>School_Provided_Servicer_Data__c</fullName>
    <label>School Provided Servicer Data</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>ACS-Perkins</fullName>
            </value>
            <value>
                <fullName>AES</fullName>
            </value>
            <value>
                <fullName>Campus Partners-Perkins</fullName>
            </value>
            <value>
                <fullName>Cornerstone</fullName>
            </value>
            <value>
                <fullName>ECSI</fullName>
            </value>
            <value>
                <fullName>Edfinancial</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>MOHELA</fullName>
            </value>
            <value>
                <fullName>Nelnet</fullName>
            </value>
            <value>
                <fullName>Sallie Mae</fullName>
            </value>
            <value>
                <fullName>UAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>