force-app/main/default/objects/Case/fields/School_Requirement__c.field-meta.xml
<CustomField>
    <fullName>School_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the school requires students to complete My Money 101.</inlineHelpText>
    <label>School Requirement</label>
    <type>Checkbox</type>
</CustomField>