force-app/main/default/objects/Case/fields/Servicer_Access_Requested__c.field-meta.xml
<CustomField>
    <fullName>Servicer_Access_Requested__c</fullName>
    <label>Servicer Access Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACS</fullName>
            </value>
            <value>
                <fullName>ACS-Perkins</fullName>
            </value>
            <value>
                <fullName>AES</fullName>
            </value>
            <value>
                <fullName>Aspire</fullName>
            </value>
            <value>
                <fullName>Campus Partners-Perkins</fullName>
            </value>
            <value>
                <fullName>Cornerstone</fullName>
            </value>
            <value>
                <fullName>ECSI</fullName>
            </value>
            <value>
                <fullName>Edfinancial</fullName>
            </value>
            <value>
                <fullName>EdManage/SC Student Loan (NFP)</fullName>
            </value>
            <value>
                <fullName>Granite State (NFP)</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Kentucky (NFP)</fullName>
            </value>
            <value>
                <fullName>MOHELA</fullName>
            </value>
            <value>
                <fullName>Nelnet</fullName>
            </value>
            <value>
                <fullName>Oklahoma (NFP)</fullName>
            </value>
            <value>
                <fullName>Sallie Mae</fullName>
            </value>
            <value>
                <fullName>UAS</fullName>
            </value>
            <value>
                <fullName>VSAC (NFP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>