force-app/main/default/objects/Case/fields/Sessions_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Sessions_Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sessions Scheduled</label>
    <type>Checkbox</type>
</CustomField>