force-app/main/default/objects/Case/fields/Sponsorhip_meeting__c.field-meta.xml
<CustomField>
    <fullName>Sponsorhip_meeting__c</fullName>
    <label>Sponsorhip meeting</label>
    <type>Date</type>
</CustomField>