force-app/main/default/objects/Case/fields/STAFF_Effect_Date__c.field-meta.xml
<CustomField>
    <fullName>STAFF_Effect_Date__c</fullName>
    <label>STAFF Effect Date</label>
    <type>Date</type>
</CustomField>