force-app/main/default/objects/Case/fields/Stage_1_Status__c.field-meta.xml
<CustomField>
    <fullName>Stage_1_Status__c</fullName>
    <label>Stage 1 Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>