force-app/main/default/objects/Case/fields/Test_File_Received__c.field-meta.xml
<CustomField>
    <fullName>Test_File_Received__c</fullName>
    <label>Test File Received</label>
    <type>Date</type>
</CustomField>