force-app/main/default/objects/Case/fields/Testing_Buy_off__c.field-meta.xml
<CustomField>
    <fullName>Testing_Buy_off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testing Buy-off</label>
    <type>Checkbox</type>
</CustomField>