force-app/main/default/objects/Case/fields/Testing_Completed__c.field-meta.xml
<CustomField>
    <fullName>Testing_Completed__c</fullName>
    <label>Testing Completed</label>
    <type>Date</type>
</CustomField>