force-app/main/default/objects/Case/fields/Vanity_URL_Status__c.field-meta.xml
<CustomField>
    <fullName>Vanity_URL_Status__c</fullName>
    <label>Vanity URL Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>