force-app/main/default/objects/Case/fields/Welcom_Package__c.field-meta.xml
<CustomField>
    <fullName>Welcom_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Package</label>
    <type>Checkbox</type>
</CustomField>