force-app/main/default/objects/Case/fields/Welcome_Guide_Code__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Guide_Code__c</fullName>
    <inlineHelpText>Enter the code of the Welcome Guide sent to this customer.  The code is located on the back cover of the Guide.</inlineHelpText>
    <label>Welcome Guide Code:</label>
    <length>25</length>
    <type>Text</type>
</CustomField>