force-app/main/default/objects/Case/fields/X3rd_Party__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party__c</fullName>
    <label>3rd Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>ELM</fullName>
            </value>
            <value>
                <fullName>OpenNet (FMS)</fullName>
            </value>
            <value>
                <fullName>OpenNet (Web)</fullName>
            </value>
            <value>
                <fullName>Nteract</fullName>
            </value>
            <value>
                <fullName>ScholarNet</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>