force-app/main/default/objects/Case/recordTypes/CallCenter.recordType-meta.xml
<RecordType>
    <fullName>CallCenter</fullName>
    <active>false</active>
    <businessProcess>Corporate</businessProcess>
    <description>Cases created by Call Center</description>
    <label>Call Center</label>
</RecordType>