force-app/main/default/objects/Case/recordTypes/Collect_Contract_Addendum.recordType-meta.xml
<RecordType>
    <fullName>Collect_Contract_Addendum</fullName>
    <active>true</active>
    <businessProcess>Contract Addendum</businessProcess>
    <description>Use when additional authorization is needed for an existing contract.</description>
    <label>Collect Contract Addendum</label>
</RecordType>