force-app/main/default/objects/Case/recordTypes/Contract_Renewal.recordType-meta.xml
<RecordType>
    <fullName>Contract_Renewal</fullName>
    <active>false</active>
    <businessProcess>Contract Renewal</businessProcess>
    <label>Contract Renewal</label>
</RecordType>