force-app/main/default/objects/Case/recordTypes/ELM_Issues.recordType-meta.xml
<RecordType>
    <fullName>ELM_Issues</fullName>
    <active>false</active>
    <businessProcess>Corporate</businessProcess>
    <description>Case used to indicate specific issues/tasks related to ELM</description>
    <label>ELM Issues</label>
</RecordType>