force-app/main/default/objects/Case/recordTypes/Email_To_Case.recordType-meta.xml
<RecordType>
    <fullName>Email_To_Case</fullName>
    <active>false</active>
    <businessProcess>Counseling Services</businessProcess>
    <description>This record type is no longer used</description>
    <label>Email To Case</label>
</RecordType>