force-app/main/default/objects/Case/recordTypes/Employer_Community_Case_From_Employee.recordType-meta.xml
<RecordType>
    <fullName>Employer_Community_Case_From_Employee</fullName>
    <active>true</active>
    <businessProcess>Counseling Services</businessProcess>
    <description>Specific for Cases created by employees on the Employer Community</description>
    <label>Counseling Services Case</label>
</RecordType>