force-app/main/default/objects/Case/recordTypes/Employer_Community_Case_From_HR_Manager.recordType-meta.xml
<RecordType>
    <fullName>Employer_Community_Case_From_HR_Manager</fullName>
    <active>true</active>
    <businessProcess>Employer Community Request</businessProcess>
    <description>Specific for Cases created by HR Managers on the Employer Community</description>
    <label>Employer Community Case: From HR Manager</label>
</RecordType>