force-app/main/default/objects/Case/recordTypes/Implementation.recordType-meta.xml
<RecordType>
    <fullName>Implementation</fullName>
    <active>false</active>
    <businessProcess>Implementation</businessProcess>
    <description>Case used to track (Full-Service/Split) Implementations</description>
    <label>Implementation</label>
</RecordType>