force-app/main/default/objects/Case/recordTypes/Implementation_Consumer_Services.recordType-meta.xml
<RecordType>
    <fullName>Implementation_Consumer_Services</fullName>
    <active>true</active>
    <businessProcess>Implementation</businessProcess>
    <description>Case to track Implementation of new customers via the consumer channel.</description>
    <label>Implementation Consumer Services</label>
</RecordType>