force-app/main/default/objects/Case/recordTypes/Implementation_Engagement_Partner.recordType-meta.xml
<RecordType>
    <fullName>Implementation_Engagement_Partner</fullName>
    <active>true</active>
    <businessProcess>Implementation</businessProcess>
    <label>Implementation Engagement Partner</label>
</RecordType>