force-app/main/default/objects/Case/recordTypes/ImplementationGO.recordType-meta.xml
<RecordType>
    <fullName>ImplementationGO</fullName>
    <active>false</active>
    <businessProcess>Implementation</businessProcess>
    <description>Case used to track GO Implementations</description>
    <label>Implementation (GO)</label>
</RecordType>