force-app/main/default/objects/Case/recordTypes/Issues.recordType-meta.xml
<RecordType>
    <fullName>Issues</fullName>
    <active>true</active>
    <businessProcess>Corporate</businessProcess>
    <description>Case for all other uses</description>
    <label>Issues</label>
</RecordType>