force-app/main/default/objects/Case/recordTypes/LenderIssues.recordType-meta.xml
<RecordType>
    <fullName>LenderIssues</fullName>
    <active>false</active>
    <businessProcess>Corporate</businessProcess>
    <description>Case related to any other Lender issues</description>
    <label>Lender Issues</label>
</RecordType>