force-app/main/default/objects/Case/recordTypes/LenderTesting.recordType-meta.xml
<RecordType>
    <fullName>LenderTesting</fullName>
    <active>false</active>
    <businessProcess>Corporate</businessProcess>
    <description>Lender Electronic Testing ie: CAM, FFH, Manifest</description>
    <label>Lender-Testing</label>
</RecordType>