force-app/main/default/objects/Case/recordTypes/MPNSerialization.recordType-meta.xml
<RecordType>
    <fullName>MPNSerialization</fullName>
    <active>false</active>
    <businessProcess>Corporate</businessProcess>
    <description>Case which allows Lender CM to track Lender-specific MPN Serialization process/status</description>
    <label>MPN Serialization</label>
</RecordType>