force-app/main/default/objects/Case/recordTypes/Salesforce_Support_Request.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Support_Request</fullName>
    <active>true</active>
    <businessProcess>Corporate</businessProcess>
    <description>To submit a request to the Salesforce Admins for support</description>
    <label>Salesforce Support Request</label>
</RecordType>