force-app/main/default/objects/Case/recordTypes/SchoolProcessChange.recordType-meta.xml
<RecordType>
    <fullName>SchoolProcessChange</fullName>
    <active>false</active>
    <businessProcess>Implementation</businessProcess>
    <description>Case used to make a Major or Minor School Process Change</description>
    <label>School Process Change</label>
</RecordType>