force-app/main/default/objects/Case/validationRules/Demog_File_Processed_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Demog_File_Processed_Date_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND (ISPICKVAL (Demog_File_Status__c, &quot;Complete&quot;), 
ISNULL(Demog_File_Processed_Date__c))</errorConditionFormula>
    <errorDisplayField>Demog_File_Status__c</errorDisplayField>
    <errorMessage>The Demog File Processed Date field must contain a date when the Status = Complete.</errorMessage>
</ValidationRule>