force-app/main/default/objects/Case/listViews/All_Consumer_Services_Cases.listView-meta.xml
<ListView>
    <fullName>All_Consumer_Services_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Implementation_Consumer_Services</value>
    </filters>
    <label>All Consumer Services Cases</label>
    <sharedTo>
        <role>MasterLevel</role>
        <role>SchoolClientManager</role>
        <role>SchoolManagement</role>
        <role>TopLevel</role>
    </sharedTo>
</ListView>