force-app/main/default/objects/Case/listViews/CS_Closed_Cases.listView-meta.xml
<ListView>
    <fullName>CS_Closed_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Employer_Community_Case_From_Employee,Case.Email_To_Case</value>
    </filters>
    <label>CS Closed Cases</label>
    <sharedTo>
        <role>EDM_Counselor</role>
        <role>EDM_Manager</role>
        <role>MasterLevel</role>
        <role>TopLevel</role>
    </sharedTo>
</ListView>