force-app/main/default/objects/Case/listViews/CS_Closed_Cases_This_week.listView-meta.xml
<ListView>
    <fullName>CS_Closed_Cases_This_week</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>New_Message_Indicator__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.REASON</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Employer_Community_Case_From_Employee,Case.Email_To_Case</value>
    </filters>
    <filters>
        <field>CASES.CLOSED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>CS Closed Cases This week</label>
    <sharedTo>
        <role>EDM_Counselor</role>
        <role>EDM_Manager</role>
        <role>MasterLevel</role>
        <role>TopLevel</role>
    </sharedTo>
</ListView>