force-app/main/default/objects/Case/listViews/CS_Email_TEST_Queue.listView-meta.xml
<ListView>
    <fullName>CS_Email_TEST_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>test</value>
    </filters>
    <label>CS Email TEST Queue Salt@saltmoney.org</label>
    <queue>Salt_Email</queue>
    <sharedTo>
        <role>EDM_Manager</role>
        <role>MasterLevel</role>
        <role>TopLevel</role>
    </sharedTo>
</ListView>